--- a/n212-multiple-regression/n212a-multiple-regression.ipynb
+++ b/n212-multiple-regression/n212a-multiple-regression.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "source": [
     "### 1) 데이터는 May 2014 ~ May 2015 의 2년치 데이터입니다. 2015-01-01 부터 큰 날짜의 데이터는 테스트, 그 이외의 데이터는 훈련 데이터셋으로 나누어 주세요\n",
-    "- **훈련데이터 샘플의 갯수를 과제 제출폼에 제출하세요.**"
+    "- **훈련데이터 샘플의 갯수를 제출하세요.**"
    ]
   },
   {
@@ -69,7 +69,7 @@
     "### 2) 두 특성(bathrooms, sqft_living)을 사용해서 다중선형회귀 모델을 만들어 보세요\n",
     "- 학습시 Parameters는 모두 기본값으로 합니다.\n",
     "- 정규화(normalize) 등 추가적인 데이터처리 없이 진행합니다.\n",
-    "- **테스트세트의 MAE 값을 과제 제출폼에 제출하세요.**"
+    "- **테스트세트의 MAE 값을 제출하세요.(소수점 이하 반올림)*"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "source": [
     "### 3) 모델의 회귀계수(coefficients)와 절편(intercept)을 확인해 보세요.\n",
-    "- **sqft_living의 회귀계수를 과제 제출폼에 제출하세요.**"
+    "- **sqft_living의 회귀계수를 제출하세요.(소수점 이하 반올림)**"
    ]
   },
   {
@@ -103,7 +103,7 @@
    "metadata": {},
    "source": [
     "### 4) MSE, RMSE, MAE, $R^2$ 를 훈련/테스트 데이터에 대해 확인해 보세요\n",
-    "- **테스트 데이터에 대한 R^2 값을 과제 제출폼에 제출하세요.**"
+    "- **테스트 데이터에 대한 MSE, RMSE, MAE, R^2 값을 올바르게 적은 보기를 고르세요.(소수점 두자리수 이하 반올림)**"
    ]
   },
   {
