--- a/n212-multiple-regression/n212a-multiple-regression.ipynb
+++ b/n212-multiple-regression/n212a-multiple-regression.ipynb
@@ -69,7 +69,7 @@
     "### 2) 두 특성(bathrooms, sqft_living)을 사용해서 다중선형회귀 모델을 만들어 보세요\n",
     "- 학습시 Parameters는 모두 기본값으로 합니다.\n",
     "- 정규화(normalize) 등 추가적인 데이터처리 없이 진행합니다.\n",
-    "- **테스트세트의 MAE 값을 제출하세요.(소수점 이하 반올림)*"
+    "- **테스트세트의 MAE 값을 제출하세요.(소수점 이하 반올림)**"
    ]
   },
   {
