--- a/n212-multiple-regression/n212a-multiple-regression.ipynb
+++ b/n212-multiple-regression/n212a-multiple-regression.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "source": [
     "### 4) MSE, RMSE, MAE, $R^2$ 를 훈련/테스트 데이터에 대해 확인해 보세요\n",
-    "- **테스트 데이터에 대한 MSE, RMSE, MAE, $R^2$ 값을 올바르게 적은 보기를 고르세요.(소수점 두자리수 이하 반올림)**"
+    "- **테스트 데이터에 대한 MSE, MAE, RMSE, $R^2$ 값을 올바르게 적은 보기를 고르세요.(소수점 두자리수 이하 반올림)**"
    ]
   },
   {
