--- a/n213-ridge-regression/n213a-ridge-regression.ipynb
+++ b/n213-ridge-regression/n213a-ridge-regression.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "source": [
     "### 5) 테스트셋에 대한 MAE 값을 계산하고 모델이 잘 만들어졌는지 확인해 보세요.\n",
-    "- **테스트셋에 대한 MAE 값을 제출하세요.(소수점 이하 반올림, 숫자만 기록)**"
+    "- **테스트셋에 대한 MAE 값을 제출하세요.(소수점 이하 반올림)**"
    ]
   },
   {
