--- a/n214-logistic-regression/n214a-logistic-regression.ipynb
+++ b/n214-logistic-regression/n214a-logistic-regression.ipynb
@@ -61,9 +61,9 @@
    "source": [
     "### 2) 다운로드 한 훈련 데이터를 훈련/검증/테스트 세트로 나누어 주세요.\n",
     "- 타겟 특성을 확인하고 타겟 변수를 나누어 줍니다.\n",
-    "- 먼저, 훈련 데이터와 테스트 데이터로 나누어 줍니다(train_test_split 사용, train/test = 80/20, random_state=2)\n",
-    "- 다시, 훈련 데이터를 훈련 데이터와 검증 데이터로 나누어 줍니다(train_test_split 사용, train/validation = 80/20, random_state=2)\n",
-    "- **검증 데이터(X_val)의 개수를 제출하세요.**"
+    "- 먼저, 훈련 세트와 테스트 세트로 나누어 줍니다(train_test_split 사용, train/test = 80/20, random_state=2)\n",
+    "- 다시, 훈련 세트를 훈련 세트와 검증 세트로 나누어 줍니다(train_test_split 사용, train/validation = 80/20, random_state=2)\n",
+    "- **검증 세트(X_val)의 개수를 제출하세요.**"
    ]
   },
   {
