--- a/n232-data-wrangling/n232a-data-wrangling.ipynb
+++ b/n232-data-wrangling/n232a-data-wrangling.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "### 2) 새로 특징들을 만들어 보세요\n",
     "- 여러분이 선택한 데이터에서 특징 공학을 수행해 보세요.\n",
-    "- **(다중선택) purchase_data를 랭글링하여 다음 조건을 계산하고 결과가 올바른 항목을 세요.**\n",
+    "- **(다중선택) purchase_data를 랭글링하여 다음 조건을 계산하고 결과가 올바른 항목을 고르세요.**\n",
     "    1. 나이 1-20세 그룹(20세 포함)의 평균 Price는 3.101818이다.\n",
     "    2. 나이 21-50세 그룹의 평균 Price는 3.021559이다.\n",
     "    3. 가장 많이 구입한 아이템의 ID는 178 이다.\n",
