--- a/n232-data-wrangling/n232a-data-wrangling.ipynb
+++ b/n232-data-wrangling/n232a-data-wrangling.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 이곳에서 제출폼 과제를 진행해 주세요 ###\n",
+    "### 이곳에서 Urlcass 퀴즈(assignment)를 진행해 주세요 ###\n",
     "import pandas as pd\n",
     "df = pd.read_csv(\"https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/assignments/purchase_data.csv\", sep=\",\",index_col=0)\n",
     "\n",
@@ -61,7 +61,6 @@
    "metadata": {},
    "source": [
     "### 2) 새로 특징들을 만들어 보세요\n",
-    "- 여러분이 선택한 데이터에서 특징 공학을 수행해 보세요.\n",
     "- **(다중선택) purchase_data를 랭글링하여 다음 조건을 계산하고 결과가 올바른 항목을 고르세요.**\n",
     "    1. 나이 1-20세 그룹(20세 포함)의 평균 Price는 3.101818이다.\n",
     "    2. 나이 21-50세 그룹의 평균 Price는 3.021559이다.\n",
@@ -75,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 이곳에서 제출폼 과제를 진행해 주세요 ###\n",
+    "### 이곳에서 Urlcass 퀴즈(assignment)과제를 진행해 주세요 ###\n",
     "# 그룹별 Price 평균\n",
     "\n",
     "# 판매수 상위 Item ID\n",
