--- a/n233-feature-importances/n233a-feature-importances.ipynb
+++ b/n233-feature-importances/n233a-feature-importances.ipynb
@@ -24,7 +24,7 @@
     "- 지속적으로 데이터를 랭글링 하고 추가적인 시각화 결과를 만드세요\n",
     "- 작성한 코드마다 적절한 코멘트를 추가하세요\n",
     "- 모델을 학습시키고 베이스라인 모델과 비교해 보세요\n",
-    "- **포트폴리오 프로젝트의 베이스라인 모델이 무엇인지 한 문장으로 설명하세요.** "
+    "- **Urclass Quiz: 포트폴리오 프로젝트의 베이스라인 모델이 무엇인지 한 문장으로 설명하세요.** "
    ]
   },
   {
@@ -50,8 +50,8 @@
    "metadata": {},
    "source": [
     "### 2) Xgboost를 사용해 학습하고 기존 모델과 비교해 보세요.\n",
-    "- 본인 포트폴리오 데이터를 Xgboost로 학습하여 기존에 만들었던 모델과 비교합니다.\n",
-    "- **breast cancer 데이터를 Xgboost로 학습하고 f1 score를 제출하세요.(test 데이터에서 0.95이상)**"
+    "- 본인 포트폴리오 데이터를 Xgboost로 학습하여 기존에 만들었던 모델과 비교해 봅니다. 성능은 더 좋아질수도 아닐수도 있습니다. \n",
+    "- **Urclass Quiz: breast cancer 데이터를 Xgboost로 학습하고 f1 score를 제출하세요.(test 데이터에서 0.95이상)**"
    ]
   },
   {
@@ -92,8 +92,8 @@
    "metadata": {},
    "source": [
     "### 3) Permutation importances를 계산하고 다른 중요도 결과와 비교해 보세요\n",
-    "- 본인 포트폴리오 데이터를 사용해 만든 모델의 Permutation importances를 계산하세요.\n",
-    "- **breast cancer 데이터를 사용해 만든 모델의 Permutation importances를 계산하고 가장 높은 값을 가지는 특성의 이름을 제출하세요.**\n",
+    "- 본인 포트폴리오 데이터를 사용해 만든 모델의 Permutation importances를 계산.\n",
+    "- **Urclass Quiz: breast cancer 데이터를 사용해 만든 모델의 Permutation importances를 계산하고 가장 높은 값을 가지는 특성의 이름을 제출하세요.**\n",
     "    - eli5 PermutationImportance 사용\n",
     "    - scoring = 'accuracy'\n",
     "    - n_iter = 5\n",
