--- a/n233-feature-importances/n233a-feature-importances.ipynb
+++ b/n233-feature-importances/n233a-feature-importances.ipynb
@@ -2,10 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "nCc3XZEyG3XV"
-   },
    "source": [
     "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
     "\n",
@@ -14,62 +10,55 @@
     "# 📝 Assignment\n",
     "---\n",
     "# Feature Importances"
-   ]
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "nCc3XZEyG3XV"
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 1) 지속적으로 포트폴리오 프로젝트를 수행하세요\n",
     "- 지속적으로 데이터를 랭글링 하고 추가적인 시각화 결과를 만드세요\n",
     "- 작성한 코드마다 적절한 코멘트를 추가하세요\n",
     "- 모델을 학습시키고 베이스라인 모델과 비교해 보세요\n",
     "- **Urclass Quiz: 포트폴리오 프로젝트의 베이스라인 모델이 무엇인지 한 문장으로 설명하세요.** "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+    "### 이곳에서 과제를 진행해 주세요 ###"
+   ],
    "outputs": [],
-   "source": [
-    "###이곳에서 과제를 진행해 주세요 ###"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 2) Xgboost를 사용해 학습하고 기존 모델과 비교해 보세요.\n",
     "- 본인 포트폴리오 데이터를 Xgboost로 학습하여 기존에 만들었던 모델과 비교해 봅니다. 성능은 더 좋아질수도 아닐수도 있습니다. \n",
     "- **Urclass Quiz: breast cancer 데이터를 Xgboost로 학습하고 f1 score를 제출하세요.(test 데이터에서 0.95이상)**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### (본인 포트폴리오 과제) 이곳에서 과제를 진행해 주세요 ### "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###\n",
+    "### (Urclass Quiz) 이곳에서 과제를 진행해 주세요 ###\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -85,64 +74,66 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=2)\n",
     "print(X_train.shape, X_test.shape)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 3) Permutation importances를 계산하고 다른 중요도 결과와 비교해 보세요\n",
-    "- 본인 포트폴리오 데이터를 사용해 만든 모델의 Permutation importances를 계산.\n",
+    "- 본인 포트폴리오 데이터를 사용해 만든 모델의 Permutation importances를 계산해 보세요.\n",
     "- **Urclass Quiz: breast cancer 데이터를 사용해 만든 모델의 Permutation importances를 계산하고 가장 높은 값을 가지는 특성의 이름을 제출하세요.**\n",
     "    - eli5 PermutationImportance 사용\n",
     "    - scoring = 'accuracy'\n",
     "    - n_iter = 5\n",
     "    - random_state = 2"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### (본인 포트폴리오 과제) 이곳에서 과제를 진행해 주세요 ### "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###\n",
+    "### (Urclass Quiz) 이곳에서 과제를 진행해 주세요 ###\n",
     "\n",
     "import eli5\n",
     "from eli5.sklearn import PermutationImportance\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 🔥 도전과제"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 4) Xgboost 외에 다른 부스팅 라이브러리로 모델을 학습시켜 Xgboost와 비교해 보세요."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 과제를 진행해 주세요 ### "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
