--- a/n234-interpreting-ml-model/n234a-interpreting-ml-model.ipynb
+++ b/n234-interpreting-ml-model/n234a-interpreting-ml-model.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
     "\n",
@@ -12,38 +11,28 @@
     "---\n",
     "\n",
     "# Interpreting ML Model"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 1) PDP를 만들어 모델을 설명하세요\n",
     "- 한 특성에 대한 PDP를 만들고 모델을 설명하세요\n",
     "- 두 특성간 관계에 대한 PDP를 만들고 모델을 설명하세요\n",
-    "- **Boston 데이터의 train 데이터를 사용해 PDP plots을 그린 후, 집값에 대해 양의 선형관계를 나타내는 특성을 고르세요.**\n",
+    "- **(Urclass Quiz) Boston 데이터의 train 데이터를 사용해 PDP plots을 그린 후, 집값에 대해 양의 선형관계를 나타내는 특성을 고르세요.**\n",
     "    - 1) LSTAT\n",
     "    - 2) B\n",
     "    - 3) TAX\n",
     "    - 4) AGE\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###\n",
+    "### (Urclass Quiz) 이곳에서 과제를 진행해 주세요 ###\n",
     "import sklearn\n",
     "import xgboost\n",
     "import shap\n",
@@ -57,65 +46,57 @@
     "model = xgboost.XGBRegressor().fit(X_train, y_train)\n",
     "\n",
     "### Draw PDP plots ###\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 2) SHAP 라이브러리를 사용해 최소 3개 이상 시각화를 하고 분석하세요\n",
-    "- 본인 포트폴리오 데이터를 사용해서 SHAP 시각화를 수행하세요\n",
-    "- **SHAP 라이브러리를 사용해 다음 문항 중 설명이 올바른 항목을 선택하세요.**\n",
+    "- **(Urclass Quiz) SHAP 라이브러리를 사용해 다음 문항 중 설명이 올바른 항목을 선택하세요.**\n",
     "    - 1) force_plot을 그려보면 CRIM은 항상 가격을 낮추는 영향을 준다.\n",
     "    - 2) SHAP의 summary_plot을 사용하면 permutation importance를 구할 수 있다.\n",
     "    - 3) SHAP summary_plot을 그려보면 (조건: X_train, plot_type='bar') LSTAT이 가장 영향력이 큰 특성으로 보인다.\n",
     "    - 4) 모델의 feature importance(model.feature_importances_)를 구하면 가장 영향력이 큰 특성이 LSTAT임을 알 수있다.\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###\n",
+    "### (Urclass Quiz) 이곳에서 과제를 진행해 주세요 ###\n",
     "explainer = shap.TreeExplainer(model)\n",
     "\n",
     "### Draw SHAP plots ###"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 🔥 도전과제"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 3) 지속적으로 포트폴리오 프로젝트를 수행하세요\n",
     "- 지속적으로 데이터를 랭글링 하고 추가적인 시각화 결과를 만드세요"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###"
-   ]
+    "### (본인 포트폴리오 과제) 이곳에서 과제를 진행해 주세요 ###"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
