--- a/n233-feature-importances/n233a-feature-importances.ipynb
+++ b/n233-feature-importances/n233a-feature-importances.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "### 2) Xgboost를 사용해 학습하고 기존 모델과 비교해 보세요.\n",
     "- 본인 포트폴리오 데이터를 Xgboost로 학습하여 기존에 만들었던 모델과 비교해 봅니다. 성능은 더 좋아질수도 아닐수도 있습니다. \n",
-    "- **Urclass Quiz: breast cancer 데이터를 Xgboost로 학습하고 f1 score를 제출하세요.(test 데이터에서 0.95이상)**"
+    "- **(Urclass Quiz) breast cancer 데이터를 Xgboost로 학습하고 f1 score를 제출하세요.(test 데이터에서 0.95이상)**"
    ],
    "metadata": {}
   },
