--- a/n211-simple-regression/n211a-simple-regression.ipynb
+++ b/n211-simple-regression/n211a-simple-regression.ipynb
@@ -1,6 +1,6 @@
 {
   "nbformat": 4,
-  "nbformat_minor": 0,
+  "nbformat_minor": 2,
   "metadata": {
     "kernelspec": {
       "display_name": "Python 3",
@@ -28,9 +28,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7Js7LGXTsPgY"
-      },
       "source": [
         "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
         "\n",
@@ -38,13 +35,13 @@
         "\n",
         "# 📝 Assignment\n",
         "---"
-      ]
+      ],
+      "metadata": {
+        "id": "7Js7LGXTsPgY"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7IXUfiQ2UKj6"
-      },
       "source": [
         "# Linear Regression\n",
         "\n",
@@ -54,151 +51,150 @@
         "\n",
         "\n",
         "이 데이터를 사용해 다음 과제를 마크다운과 코드를 사용해 진행해 주세요.\n"
-      ]
+      ],
+      "metadata": {
+        "id": "7IXUfiQ2UKj6"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "NTrpi0W5sPgb"
-      },
+      "execution_count": null,
       "source": [
         "# 데이터는 캐글에서 받으셔도 되고 이 링크에서 불러와도 됩니다.\n",
         "import pandas as pd\n",
         "df = pd.read_csv('https://ds-lecture-data.s3.ap-northeast-2.amazonaws.com/kc_house_data/kc_house_data.csv')\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "NTrpi0W5sPgb"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "BegLKHTzsPgc"
-      },
       "source": [
         "### 1) 특성들과 타겟(Price)과의 상관계수를 계산하고 가장 상관관계가 높은 특성을 찾아 타겟과의 관계를 시각화하세요.\n",
-        "- **타겟과 상관관계가 가장 높은 특성의 이름을 과제 제출폼에 제출하세요.**"
-      ]
+        "- **(Urclass Quiz) 타겟과 상관관계가 가장 높은 특성의 이름을 제출하세요.**"
+      ],
+      "metadata": {
+        "id": "BegLKHTzsPgc"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "source": [
+        "### 이곳에서 과제를 진행해 주세요 ###\n"
+      ],
+      "outputs": [],
       "metadata": {
         "id": "IpyuGlxcsPgc"
-      },
-      "source": [
-        "### 이곳에서 과제를 진행해 주세요 ###\n"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "_O3ZZV12sPgd"
-      },
       "source": [
         "### 2) sqft_living 와 price의 scatter plot을 그리고 기준모델을 시각화해 보세요.\n",
-        "- **기준모델의 값을 제출하세요. (소숫점 이하 반올림)**"
-      ]
+        "- **(Urclass Quiz) 기준모델의 값을 제출하세요. (소숫점 이하 반올림)**"
+      ],
+      "metadata": {
+        "id": "_O3ZZV12sPgd"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "OjJlrKnzRrYl"
-      },
+      "execution_count": null,
       "source": [
         "### 이곳에서 과제를 진행해 주세요 ###"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "OjJlrKnzRrYl"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "12jwrPP3sPge"
-      },
       "source": [
         "### 3) Scikit-Learn 라이브러리를 사용해 특성 sqft_living에 대한 선형회귀모델을 만들어 보세요.\n",
-        "- **sqft_living 값이 4000인 경우에 모델이 예측하는 주택 가격을 제출하세요.(소수점 이하 반올림)**"
-      ]
+        "- **(Urclass Quiz) sqft_living 값이 4000인 경우에 모델이 예측하는 주택 가격을 제출하세요.(소수점 이하 반올림)**"
+      ],
+      "metadata": {
+        "id": "12jwrPP3sPge"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Gum7280GsPgf"
-      },
+      "execution_count": null,
       "source": [
         "### 이곳에서 과제를 진행해 주세요 ###\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "Gum7280GsPgf"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "u5gYsjhUsPgg"
-      },
       "source": [
         "### 4) 만든 모델을 사용해 새로운 데이터에 대해 예측을 해 보고 coefficient를 사용해 설명해 보세요.\n",
-        "- **sqft_living 특성에 대한 회귀계수를 제출하세요. (소수점 이하 반올림)**"
-      ]
+        "- **(Urclass Quiz) sqft_living 특성에 대한 회귀계수를 제출하세요. (소수점 이하 반올림)**"
+      ],
+      "metadata": {
+        "id": "u5gYsjhUsPgg"
+      }
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "### 이곳에서 과제를 진행해 주세요 ###"
+      ],
+      "outputs": [],
       "metadata": {
         "id": "4Bu9JUA8RnST"
-      },
-      "source": [
-        "### 이곳에서 과제를 진행해 주세요 ###"
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "XJsQ3FE_sPgh"
-      },
       "source": [
         "### 5) bathrooms 특성을 사용하여 모델을 만들어보고 비교해 보세요.\n",
-        "- **bathrooms에 대한 회귀계수를 제출하세요. (소수점 이하 반올림)**"
-      ]
+        "- **(Urclass Quiz) bathrooms에 대한 회귀계수를 제출하세요. (소수점 이하 반올림)**"
+      ],
+      "metadata": {
+        "id": "XJsQ3FE_sPgh"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "YNhfe1GhRoZ7"
-      },
+      "execution_count": null,
       "source": [
         "### 이곳에서 과제를 진행해 주세요 ###"
       ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "metadata": {
+        "id": "YNhfe1GhRoZ7"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "DzKa4o0BsPgi"
-      },
       "source": [
-        "## 🔥도전과제\n",
+        "## 🔥도전과제 (Github - Discussion) \n",
         "\n",
         "### 공지로 안내드리는 Github - Discussion 페이지에 올려보세요:)\n",
         "\n",
         "### 6) 단순선형회귀모델을 만들기 위한 좋은 특성을 선택하기 위해 고려해야 하는 사항들에 대해 조사하고 논해보세요.\n",
         "\n",
         "### 7) OLS에 대해서 검색해 보고 본인의 이해를 녹여내어 본인의 언어로 설명해 보세요."
-      ]
+      ],
+      "metadata": {
+        "id": "DzKa4o0BsPgi"
+      }
     },
     {
       "cell_type": "markdown",
+      "source": [],
       "metadata": {
         "id": "JZ9zRtKXRpsu"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      }
     }
   ]
 }
