--- a/n222-random-forests/n222a-random-forests.ipynb
+++ b/n222-random-forests/n222a-random-forests.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
     "\n",
@@ -10,14 +9,11 @@
     "\n",
     "# 📝 Assignment\n",
     "---"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "colab_type": "text",
-    "id": "7IXUfiQ2UKj6"
-   },
    "source": [
     "# 랜덤포레스트(Random Forests)\n",
     "\n",
@@ -25,71 +21,75 @@
     "- EDA는 항상 완벽할 수 없지요 한 주간 계속 같은 데이터로 과제를 진행하므로 부족한 부분을 추가하거나 논하세요.\n",
     "- (지금은 feature engineering에 너무 시간을 들이지 마세요!)\n",
     "- Ordinal Encoding을 적용해 보세요.\n",
-    "- **(객관식) 다음 특성들 중에 순서를 고려한 Ordinal Encoding이 필요해 보이는 특성을 고르세요.**\n",
+    "- **(Urclass Quiz) 다음 특성들 중에 순서를 고려한 Ordinal Encoding이 필요해 보이는 특성을 고르세요.**\n",
     "    1. opinion_h1n1_vacc_effective\n",
     "    2. state\n",
     "    3. marital\n",
     "    4. employment_occupation\n"
-   ]
+   ],
+   "metadata": {
+    "colab_type": "text",
+    "id": "7IXUfiQ2UKj6"
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 과제를 진행해 주세요 ###"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 2) 랜덤포레스트 모델을 적용한 후의 결과를 캐글에 제출하세요.\n",
     "- 랜덤포레스트를 적용하고 성능이 오히려 떨어졌을 수도 있습니다! 만약 그렇다면 이유를 본인 논리로 분석해 보세요.\n",
-    "- **캐글 Leaderboard의 본인 Score를 제출하세요.**"
-   ]
+    "- **(Urclass Quiz) 캐글 Leaderboard의 본인 Score를 제출하세요.**"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 과제를 진행해 주세요 ###"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## 🔥 도전과제"
-   ]
+    "## 🔥 도전과제(Github - Discussion)"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 3) 수업에 사용하지 않은 다른 종류의 [category_encoders](http://contrib.scikit-learn.org/category_encoders/)을 적용해 보고 인코더에 대해 설명하세요\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 과제를 진행해 주세요 ###"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 참고자료\n",
     "\n",
     "- [Random Forests for Complete Beginners](https://victorzhou.com/blog/intro-to-random-forests/)"
-   ]
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
