--- a/n232-data-wrangling/n232a-data-wrangling.ipynb
+++ b/n232-data-wrangling/n232a-data-wrangling.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
     "\n",
@@ -11,22 +10,21 @@
     "# 📝 Assignment\n",
     "---\n",
     "# Data Wrangling\n"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 1) 지속적으로 여러분의 포트폴리오 데이터를 랭글링 하세요\n",
     "- 여러분이 선택한 데이터들을 랭글링하여 모델을 만들기 위한 테이블 형태의 데이터로 만들어 보세요.\n",
-    "- **다음 함수의 result를 완성시키고 리턴값을 제출하세요.**"
-   ]
+    "- **(Urclass Quiz) 다음 함수의 result를 완성시키고 리턴값을 제출하세요.**"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 Urlcass 퀴즈(assignment)를 진행해 주세요 ###\n",
     "import pandas as pd\n",
@@ -45,34 +43,34 @@
     "    return round(sum_male + sum_female)\n",
     "\n",
     "result(df)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 본인 데이터로 과제를 진행해 주세요 ### "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 2) 새로 특징들을 만들어 보세요\n",
-    "- **(다중선택) purchase_data를 랭글링하여 다음 조건을 계산하고 결과가 올바른 항목을 고르세요.**\n",
+    "- **(Urclass Quiz) purchase_data를 랭글링하여 다음 조건을 계산하고 결과가 올바른 항목을 고르세요.**\n",
     "    1. 나이 1-20세 그룹(20세 포함)의 평균 Price는 3.101818이다.\n",
     "    2. 나이 21-50세 그룹의 평균 Price는 3.021559이다.\n",
     "    3. 가장 많이 구입한 아이템의 ID는 178 이다.\n",
     "    4. 두번째로 매출을 많이 낸 아이템 ID는 145이다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 Urlcass 퀴즈(assignment)과제를 진행해 주세요 ###\n",
     "# 그룹별 Price 평균\n",
@@ -80,40 +78,42 @@
     "# 판매수 상위 Item ID\n",
     "\n",
     "# 매출 상위 Item IDs\n"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 본인 데이터로 과제를 진행해 주세요 ### "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## 🔥 도전과제"
-   ]
+    "## 🔥 도전과제(Github - Discussion)"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### 3) 조금 부족하더라도 최소한의 랭글링으로 데이터를 준비하여 간단한 모델을 학습시켜 보세요\n",
     "- 여러분들이 선택한 데이터를 가지고 간단한 모델을 학습하고 결과를 리포팅 합니다."
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "### 이곳에서 과제를 진행해 주세요 ### "
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
