--- a/n233-feature-importances/n233a-feature-importances.ipynb
+++ b/n233-feature-importances/n233a-feature-importances.ipynb
@@ -115,7 +115,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 🔥 도전과제"
+    "## 🔥 도전과제(Github - Discussion)"
    ],
    "metadata": {}
   },
