--- a/n234-interpreting-ml-model/n234a-interpreting-ml-model.ipynb
+++ b/n234-interpreting-ml-model/n234a-interpreting-ml-model.ipynb
@@ -77,7 +77,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 🔥 도전과제"
+    "## 🔥 도전과제(Github - Discussion)"
    ],
    "metadata": {}
   },
