--- a/n222-random-forests/n222a-random-forests.ipynb
+++ b/n222-random-forests/n222a-random-forests.ipynb
@@ -69,17 +69,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 3) 수업에 사용하지 않은 다른 종류의 [category_encoders](http://contrib.scikit-learn.org/category_encoders/)을 적용해 보고 인코더에 대해 설명하세요\n"
+    "### 3) 수업에 사용하지 않은 다른 종류의 [category_encoders](http://contrib.scikit-learn.org/category_encoders/)을 적용해 보고 인코더에 대해 설명하세요\n",
+    "\n",
+    "### 4) 왜 트리모델에서는 ordinal encoding을 주로 사용하며 (one-hot encoding대신), 범주형 자료를 ordinal encoding으로 사용해도 되는 이유는 무엇이라고 생각하시는지 논의해 보세요\n"
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ###"
-   ],
-   "outputs": [],
    "metadata": {}
   },
   {
