--- a/n212-multiple-regression/n212a-multiple-regression.ipynb
+++ b/n212-multiple-regression/n212a-multiple-regression.ipynb
@@ -101,7 +101,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 4) MSE, RMSE, MAE, $R^2$ 를 훈련/테스트 데이터에 대해 확인해 보세요\n",
+    "### 4) MSE, MAE, RMSE, $R^2$ 를 훈련/테스트 데이터에 대해 확인해 보세요\n",
     "- **(Urclass Quiz) 테스트 데이터에 대한 MSE, MAE, RMSE, $R^2$ 값을 올바르게 적은 보기를 고르세요.(소수점 두자리수 이하 반올림)**"
    ],
    "metadata": {}
