--- a/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
+++ b/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
@@ -1,139 +1,158 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "source": [
-    "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
-    "\n",
-    "## *AIB / SECTION 2 / SPRINT 3 / NOTE 1*\n",
-    "\n",
-    "# 📝 Assignment\n",
-    "---\n",
-    "# Choose your ML problems\n",
-    "\n",
-    "이번 스프린트에서는 포트폴리오 프로젝트를 위해 수강생 각자가 정한 데이터셋을 사용하여 과제를 수행합니다. 프로젝트를 위한 데이터를 최종 선택하기 전에 여러 가능한 데이터세트를 살펴보고 간단한 모델까지 학습해 보는 것을 추천드립니다."
-   ],
-   "metadata": {
-    "colab_type": "text",
-    "id": "nCc3XZEyG3XV"
-   }
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<img align=\"right\" src=\"https://ds-cs-images.s3.ap-northeast-2.amazonaws.com/Codestates_Fulllogo_Color.png\" width=100>\n",
+        "\n",
+        "## *AIB / SECTION 2 / SPRINT 3 / NOTE 1*\n",
+        "\n",
+        "# 📝 Assignment\n",
+        "---\n",
+        "# Choose your ML problems\n",
+        "\n",
+        "이번 스프린트에서는 포트폴리오 프로젝트를 위해 수강생 각자가 정한 데이터셋을 사용하여 과제를 수행합니다. 프로젝트를 위한 데이터를 최종 선택하기 전에 여러 가능한 데이터세트를 살펴보고 간단한 모델까지 학습해 보는 것을 추천드립니다."
+      ],
+      "metadata": {
+        "id": "nCc3XZEyG3XV"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1) 타겟으로 사용할 특성을 선택합니다.\n",
+        "**(Urclass Quiz)** 여러분들이 프로젝트에 사용할 데이터셋과 타겟특성에 대해 아래의 내용을 포함하여 간략하게 설명해주세요. \n",
+        "* dtype을 사용해서 타겟특성의 데이터 타입 확인\n",
+        "* describe를 사용해서 타겟특성의 대표값 확인(실수-평균, 범주형-최빈값)"
+      ],
+      "metadata": {
+        "id": "NNc8mCb-pHYk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "### 이곳에서 과제를 진행해 주세요 ### "
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "OlzwiTa1pHYl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2) 풀고자 하는 문제가 분류/회귀 문제인지 정합니다.\n",
+        "**(Urclass Quiz)** 다이아몬드를 보관하기 위해 금고를 만들었습니다. 금고가 너무 작아서 가격이 상위 25%인 것만 보관하려고 합니다. 이를 위해 'price' 특성을 이용해 금고에 보관할 다이아몬드와 그렇지 않은 것으로 분류하는 이진분류 컬럼을 만들어 타겟 특성으로 사용할 것입니다. 타겟 특성의 최빈값과 빈도수를 적어주세요.\n",
+        "- 'top25'라는 새로운 타겟변수(컬럼)를 만들어주세요.\n",
+        "- 상위 25% 이상 True, 상위 25% 미만 False\n",
+        "\n",
+        "   "
+      ],
+      "metadata": {
+        "id": "BcgcG5UfpHYl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "### 이곳에서 과제를 진행해 주세요 ### \n",
+        "import seaborn as sns\n",
+        "diamonds = sns.load_dataset('diamonds')"
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "53QsekKhpHYl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3) 타겟의 분포를 분석하고 사용할 평가지표를 선택합니다. 평가지표를 선택한 이유를 설명하세요.\n",
+        "- 분류: 클래스가 몇 개인지? 클래스 비율이 어떤지(balance or imbalance)\n",
+        "- 회귀: 타겟 분포가 right-skewed 인지? log-transform을 사용할 것인지?\n",
+        "- 분류: 다수 클래스(majority class) 비율이 50%~70% 인 경우 정확도(accuracy)만 사용해도 무방합니다. 하지만 범위를 넘어설 경우 정확도만을 사용해서는 모델을 잘못 이해할 수 있습니다. 어떤 평가지표를 사용해야 할까요?\n",
+        "- 회귀: MAE, RMSE, R^2 등을 사용할 수 있습니다.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "**(Urclass Quiz)** 여러분들이 프로젝트에 사용할 데이터의 기준모델과 사용할 평가지표를 제출해주세요."
+      ],
+      "metadata": {
+        "id": "wfkMQUkSpHYm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "### 이곳에서 과제를 진행해 주세요 ### "
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "u9hgVuVmpHYm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 🔥 도전과제(Github - Discussion)"
+      ],
+      "metadata": {
+        "id": "LDng-TSrpHYn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4) 데이터를 훈련/검증/테스트 데이터로 나누고 전처리를 수행합니다. 그리고 간단한 모델을 사용해서 학습을 수행합니다.\n",
+        "- 이상치(outliers)가 있다면 어떻게 처리할 것인지 설명합니다.\n",
+        "- 무작위로 or 시간에 따라 데이터를 나눌 것인지 설명합니다.\n",
+        "- 모델 학습 결과를 리포팅 합니다.\n",
+        "- 정보 누수(leakage)가 있는지 확인해 봅니다."
+      ],
+      "metadata": {
+        "id": "XpiVRtsDpHYn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "source": [
+        "### 이곳에서 과제를 진행해 주세요 ### "
+      ],
+      "outputs": [],
+      "metadata": {
+        "id": "vlxgv4m-pHYn"
+      }
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.7"
+    },
+    "colab": {
+      "name": "n231a-choose-your-ml-problems.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 1) 타겟으로 사용할 특성을 선택합니다.\n",
-    "- **(Urclass Quiz) 다음과 같은 상황에 대한 설명 중 맞는 설명을 고르세요.**\n",
-    "    - 특성 3개를 사용해 가장 성능이 좋은 모델 A를 만들고 또 특성 5개를 사용해 최적의 모델 B를 학습하였습니다. 이때 모델 A에서 선택된 특성은 A1, A2, A3 입니다.\n",
-    "    1. 최적의 모델 B에는 특성 A1, A2, A3가 항상 선택됩니다.\n",
-    "    2. 최적의 모델 B 학습시 특성 A1, A2, A3는 전혀 사용되지 않습니다.\n",
-    "    3. 최적의 모델 B에 특성 A1, A2, A3가 선택될지 알 수 없습니다."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 2) 풀고자 하는 문제가 분류/회귀 문제인지 정합니다.\n",
-    "- **(Urclass Quiz) 다음 설명 중 가장 틀린 항목을 고르세요.**\n",
-    "    1. 특정한 종목의 다음날 주식 종가를 예측하는 문제는 Supervised Learning 문제이다.\n",
-    "    2. 다음날 KOSPI 지수가 증가할지 감소할지 예측하는 문제는 Classification 문제이다.\n",
-    "    3. 축구 경기 도중에 승패를 예측하는 모델을 만들기 위해서는 실시간 통계 정보와 경기마다 승패 데이터가 필요하다.\n",
-    "    4. 이번 시즌 토트넘 선수들의 개인 통계 데이터(슛, 도움, ...)를 사용해서 다음 토트넘 경기의 승패를 예측할 수 있다.\n",
-    "   "
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 3) 타겟의 분포를 분석하고 사용할 평가지표를 선택합니다. 평가지표를 선택한 이유를 설명하세요.\n",
-    "- 분류: 클래스가 몇 개인지? 클래스 비율이 어떤지(balance or imbalance)\n",
-    "- 회귀: 타겟 분포가 right-skewed 인지? log-transform을 사용할 것인지?\n",
-    "- 분류: 다수 클래스(majority class) 비율이 50%~70% 인 경우 정확도(accuracy)만 사용해도 무방합니다. 하지만 범위를 넘어설 경우 정확도만을 사용해서는 모델을 잘못 이해할 수 있습니다. 어떤 평가지표를 사용해야 할까요?\n",
-    "- 회귀: MAE, RMSE, R^2 등을 사용할 수 있습니다.\n",
-    "- **(Urclass Quiz) 같은 데이터로 스팸을 예측하는 모델 A와 B를 만들었습니다. 다음 설명 중 가장 올바른 항목을 선택하고 과제 제출폼에 제출하세요.**\n",
-    "    1. A의 재현율은 80%이고 B의 재현율은 60%일 때 A가 더 좋은 모델이다.\n",
-    "    2. A의 정밀도는 80%이고 B의 정밀도는 60%일 때 A가 더 좋은 모델이다.\n",
-    "    3. A는 B보다 정밀도는 높지만 재현율은 낮다. A가 더 좋은 모델이다.\n",
-    "    4. A는 B보다 재현율은 높지만, 정밀도는 낮다. A가 더 좋은 모델이다.\n",
-    "    5. A는 B보다 정밀도, 재현율 모두 높다. A가 더 좋은 모델이다."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## 🔥 도전과제(Github - Discussion)"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "### 4) 데이터를 훈련/검증/테스트 데이터로 나누고 전처리를 수행합니다. 그리고 간단한 모델을 사용해서 학습을 수행합니다.\n",
-    "- 이상치(outliers)가 있다면 어떻게 처리할 것인지 설명합니다.\n",
-    "- 무작위로 or 시간에 따라 데이터를 나눌 것인지 설명합니다.\n",
-    "- 모델 학습 결과를 리포팅 합니다.\n",
-    "- 정보 누수(leakage)가 있는지 확인해 봅니다."
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ],
-   "outputs": [],
-   "metadata": {}
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
