--- a/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
+++ b/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
@@ -44,7 +44,7 @@
       "cell_type": "markdown",
       "source": [
         "### 2) 풀고자 하는 문제가 분류/회귀 문제인지 정합니다.\n",
-        "**(Urclass Quiz)** 다이아몬드를 보관하기 위해 금고를 만들었습니다. 금고가 너무 작아서 가격이 상위 25%인 것만 보관하려고 합니다. 이를 위해 'price' 특성을 이용해 금고에 보관할 다이아몬드와 그렇지 않은 것으로 분류하는 이진분류 컬럼을 만들어 타겟 특성으로 사용할 것입니다. 타겟 특성의 최빈값과 빈도수를 적어주세요.\n",
+        "**(Urclass Quiz)** 다이아몬드를 보관하기 위해 금고를 만들었습니다. 금고가 너무 작아서 가격이 상위 25%인 것만 보관하려고 합니다. 이를 위해 'price' 특성을 이용해 금고에 보관할 다이아몬드와 그렇지 않은 것으로 분류하는 이진분류 컬럼을 만들어 타겟 특성으로 사용할 것입니다. 타겟 특성의 최빈값의 빈도수를 적어주세요.\n",
         "- 'top25'라는 새로운 타겟변수(컬럼)를 만들어주세요.\n",
         "- 상위 25% 이상 True, 상위 25% 미만 False\n",
         "\n",
