--- a/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
+++ b/n231-choose-your-ml-problems/n231a-choose-your-ml-problems.ipynb
@@ -22,8 +22,8 @@
       "source": [
         "### 1) 타겟으로 사용할 특성을 선택합니다.\n",
         "**(Urclass Quiz)** 여러분들이 프로젝트에 사용할 데이터셋과 타겟특성에 대해 아래의 내용을 포함하여 간략하게 설명해주세요. \n",
-        "* dtype을 사용해서 타겟특성의 데이터 타입 확인\n",
-        "* describe를 사용해서 타겟특성의 대표값 확인(실수-평균, 범주형-최빈값)"
+        "* `df.dtypes`을 사용해서 타겟특성의 데이터 타입 확인\n",
+        "* `df.describe()를 사용해서 타겟특성의 대표값 확인(실수-평균, 범주형-최빈값)"
       ],
       "metadata": {
         "id": "NNc8mCb-pHYk"
