--- a/n213-ridge-regression/n213a-ridge-regression.ipynb
+++ b/n213-ridge-regression/n213a-ridge-regression.ipynb
@@ -199,7 +199,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 8) 특징선택(feature selection) 방법들에 대하여 조사한 후 함께 논의해 보세요"
+    "### 8) 특성선택(feature selection) 방법들에 대하여 조사한 후 함께 논의해 보세요"
    ],
    "metadata": {}
   }
