--- a/n223-evaluation-metrics-for-classification/n223a-evaluation-metrics-for-classification.ipynb
+++ b/n223-evaluation-metrics-for-classification/n223a-evaluation-metrics-for-classification.ipynb
@@ -105,19 +105,11 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 5) 각 평가지표에 대해 결과를 최대한 분석하고 무엇이 부족한지, 어떤 방향으로 성능을 높여야 하는지 논하세요."
+    "### 5) confusion matrix, classification report 등을 그려 보시고, 각 평가지표들에 대해 최대한 분석하고 precision과 recall 중 어느 것을 높이는 방향으로 모델링 해야할지 논의해 보세요. "
    ],
    "metadata": {}
   },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "source": [
-    "### 이곳에서 과제를 진행해 주세요 ### "
-   ],
-   "outputs": [],
-   "metadata": {}
-  }
+
  ],
  "metadata": {
   "kernelspec": {
