--- a/n223-evaluation-metrics-for-classification/n223a-evaluation-metrics-for-classification.ipynb
+++ b/n223-evaluation-metrics-for-classification/n223a-evaluation-metrics-for-classification.ipynb
@@ -109,17 +109,36 @@
    ],
    "metadata": {}
   },
-   {
+ {
    "cell_type": "code",
-   "metadata": {
-     "id": "OQl2hpX0Dy5C"
-   },
+   "execution_count": 5,
    "source": [
-     "### 이곳에서 과제를 진행해 주세요 ### "
+    "### 이곳에서 과제를 진행해 주세요 ### "
    ],
-   "execution_count": null,
-   "outputs": []
- }
-]
+   "outputs": [],
+   "metadata": {}
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
 
