--- a/n233-feature-importances/n233a-feature-importances.ipynb
+++ b/n233-feature-importances/n233a-feature-importances.ipynb
@@ -122,7 +122,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 4) Xgboost 외에 다른 부스팅 라이브러리로 모델을 학습시켜 Xgboost와 비교해 보세요."
+    "### 1. 특성 중요도를 계산하는 방법의 장단점을 설명하고 각각 어떤 상황에 사용하면 좋을지 설명해 보세요\n",
+    "\n"
+    "### 2. bagging과 boosting의 차이점과 각각 어떤 알고리즘 종류들이 있는지 알고리즘별 장단점을 설명하고, 어떤 상황에서 사용하면 좋을지 논의해 보세요.\n"
    ],
    "metadata": {}
   },
