--- a/n222-random-forests/n222-random-forests.ipynb
+++ b/n222-random-forests/n222-random-forests.ipynb
@@ -41,7 +41,7 @@
     "오늘 배우는 랜덤포레스트 모델에 대해서 다음 영상을 시청하고 질문에 답해보세요:\n",
     "\n",
     "- [StatQuest: Random Forests Part 1 - Building, Using and Evaluating](https://youtu.be/J4Wdy0Wc_xQ)\n",
-    "    - 랜텀포레스트가 결정트리와 어떻게 다를까요?\n",
+    "    - 랜포레스트가 결정트리와 어떻게 다를까요?\n",
     "    - 배깅(Bagging)이 무슨 뜻입니까?\n",
     "    - Out-Of-Bag(OOB) sample의 역할이 무엇이지요?\n",
     "\n",
@@ -636,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 랜텀포레스트 특성 중요도 비교 (onehot vs ordinal)?\n",
+    "### 랜덤포레스트 특성 중요도 비교 (onehot vs ordinal)?\n",
     "\n",
     "랜덤포레스트에서는 학습 후에 특성들의 **중요도 정보**(Gini importance)를 기본으로 제공합니다. 중요도는 노드들의 지니불순도(Gini impurity)를 가지고 계산하는데\n",
     "\n",
