--- a/n214-logistic-regression/n214-logistic-regression.ipynb
+++ b/n214-logistic-regression/n214-logistic-regression.ipynb
@@ -785,7 +785,7 @@
     "\n",
     "이렇게 오즈에 로그를 취해 변환하는 것을 **로짓변환(Logit transformation)** 이라고 합니다. 로짓변환을 통해 비선형형태인 로지스틱함수형태를 선형형태로 만들어 회귀계수의 의미를 해석하기 쉽게 하는데, 특성 X의 증가에 따라 **로짓(ln(odds))**가 얼마나 증가(or감소)했다고 해석을 할 수 있게 됩니다.\n",
     "\n",
-    "(odds 확률로 해석을 하려면 exp(계수) = p 를 계산해서 특성 1단위 증가당 확률이 p배 증가한다고 해석을 할 수 있습니다.)"
+    "(odds 확률로 해석을 하려면 exp(계수) = k 를 계산해서 특성 1단위 증가당 odds 확률이 k배 증가한다고 해석을 할 수 있습니다.)"
    ],
    "metadata": {}
   },
