--- a/n213-ridge-regression/n213-ridge-regression.ipynb
+++ b/n213-ridge-regression/n213-ridge-regression.ipynb
@@ -3827,7 +3827,7 @@
         "- [Sklearn Ridge](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Ridge.html#sklearn-linear-model-ridge)\n",
         "- [Sklearn RidgeCV](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html#sklearn-linear-model-ridgecv)\n",
         "- [Modern regression 1: Ridge regression](http://www.stat.cmu.edu/~ryantibs/datamining/lectures/16-modr1.pdf)\n",
-        "- [Regularization: Ridge Regression and the LASSO](https://statweb.stanford.edu/~tibs/sta305files/Rudyregularization.pdf)\n",
+        "- [Regularization: Ridge Regression and the LASSO](http://zhanxw.com/blog/wp-content/uploads/2013/09/Rudyregularization.pdf)\n",
         "\n",
         "\n",
         "\n"
